feat: add and implement endpoint for comments